discussion/kv_engine/178830/178830_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Include all bucket states in "bucket_details <bucket>"

If one tried to request the buckets_details for a single bucket
it would only return the stats if the bucket was fully online
(and not creating/deleting or the upcomming pausing/paused).

The bucket stats should all be written while holding the
bucket lock to ensure that it won't race with the other
bucket commands

Change-Id: Ib306a3517a0a85cbd3029f2e5fd8f21f7378a024

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-08-14 03:15:24.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-14 03:27:48.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19438/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:236:43: error: no member named "dump" in "Bucket" [clang-diagnostic-error]
            const auto stats_str = bucket.dump();
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19438/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:236:43:
error: no member named "dump" in "Bucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19438/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48331/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/protocol/mcbp/stats_context.cc(236): error C2039: "dump": is not a member of "Bucket" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48331/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40604/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:236:43:
error: no member named "dump" in "Bucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40604/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9128/ : FAILURE

Compile error at [2022-08-14T03:20:34.081Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:236:43:
error: no member named "dump" in "Bucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9128/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21375/ : FAILURE

Compile error at [2022-08-14T03:19:10.087Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:236:43:
error: ?class Bucket? has no member named ?dump?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21375/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21727/ : FAILURE

Compile error at [2022-08-14T03:19:27.613Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:236:43:
error: ?class Bucket? has no member named ?dump?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21727/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22448/ : FAILURE

Compile error at [2022-08-14T03:16:44.815Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:236:43:
error: no member named "dump" in "Bucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22448/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20625/ : FAILURE

Compile error at [2022-08-14T03:25:50.445Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:236:43:
error: no member named "dump" in "Bucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20625/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29752/ : FAILURE

Compile error at [2022-08-14T03:19:13.497Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:236:43:
error: no member named "dump" in "Bucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29752/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9225/ : FAILURE

Compile error at [2022-08-14T03:24:06.693Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/daemon/protocol/mcbp/stats_context.cc:236:43:
error: ?class Bucket? has no member named ?dump?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9225/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18650/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
